<resources>
    <string name="app_name">PersonalStylerLib</string>

    <!--Fonts Asset-->
    <string name="default_font_regular">Regular.ttf</string>
    <string name="default_font_bold">Bold.ttf</string>
    <string name="default_mandatory"> *</string>
    <string name="register_bar_ghid">Ghid</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="add_service_add">Adauga un serviciu</string>

    <string name="photos_option_choose">Alege o optiune</string>
    <string name="photos_option_delete">Sterge</string>
    <string name="photos_option_edit">Editeaza</string>
    <string name="photos_option_close">Inchide</string>
    <string name="photos_option_camera">Camera</string>
    <string name="photos_option_galerie">Galerie</string>


    <string name="default_loading_message">Please wait...</string>
    <string name="unexpected_error">Unexpected error. Please try again later or contact the administrator</string>
    <string name="camera_permission_error">To use this option you must grand CAMERA PERMISSION</string>
    <string name="default_crop_name">Crop Image</string>

    <string name="schedule_picker_title">Alege intervalul</string>

    <!--Intro-->
    <string name="intro_title_page1">SERVICII PREMIUM</string>
    <string name="intro_title_page2">STILISTI DE TOP</string>
    <string name="intro_title_page3">SIMPLU SI RAPID</string>

    <string name="intro_description1_page1">Fie ca ai nevoie de o schimbare de look pentru un eveniment special sau doar vrei sa te relaxezi cu un masaj dupa o zi de munca, noi iti propunem la dispozitie cele mai bune servicii din oras.</string>
    <string name="intro_description1_page2">Iti garantam servicii de calitate, puse la dispozitie de cei mai buni profesionisti. Prin sistemul nostru de ranking, ai acces rapid la profilurile stilistilor case se afla in top in domeniile lor.</string>
    <string name="intro_description1_page3">Tipul tau este pretios! Tocmai de aceea, noi am creat o metoda simpla si intuitiva prin care iti poti face o programare, idiferent daca esti la tine acasa sau la birou. Este simplu ca 1 – 2 – 3!</string>

    <string name="intro_skip">Skip</string>
    <string name="intro_next">Next</string>
    <string name="intro_finis">Finish</string>


    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">less than a minute</string>
    <string name="time_ago_minute">about a minute</string>
    <string name="time_ago_minutes">%d minutes</string>
    <string name="time_ago_hour">about an hour</string>
    <string name="time_ago_hours">about %d hours</string>
    <string name="time_ago_day">a day</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_month">about a month</string>
    <string name="time_ago_months">%d months</string>
    <string name="time_ago_year">about a year</string>
    <string name="time_ago_years">%d years</string>


    <string name="reset_popup_messages">Am trimis email-ul de restare a parolei la %1$s. Te rugam sa iti verifici inbox-ul in urmatoarele minute. Dca tot nu ai primit....  aia e</string>
    <string name="register_phone_text">Mesajul cu codul a fost trimis la numarul de telefon %1$s.</string>
    <string name="onboarding_step_1_code_error">Introduceti codul</string>
    <string name="reset_popup_title">Email trimis!</string>
    <string name="reset_popup_button">Mergi la Inbox</string>

    <string name="schedule_salveaza">Salveaza</string>
    <string name="schedule_anuleaza">Anuleaza</string>

    <string name="dialog_button_anuleaza">Anuleaza</string>
    <string name="dialog_button_salveaza">Salveaza</string>

    <string name="text_titlu">Sterge adresa</string>
    <string name="text_intrebare">Esti sigur ca doresti sa stergi aceasta adresa  </string>
    <string name="text_pozitiv">Da</string>
    <string name="text_negativ">Nu</string>
</resources>
