<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nContainer"
    style="@style/MatchMatch.Vertical">


    <LinearLayout
        style="@style/MatchWrap.Vertical"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

    <TextView
        android:id="@+id/nChooseCamera"
        style="@style/MatchWrap.Regular.Black.14"
        android:visibility="gone"
        android:layout_margin="12dp"
        android:text="@string/photos_option_camera"/>

    <View
        style="@style/Divider.Horizontal"/>

    <TextView
        android:id="@+id/nChooseGalery"
        style="@style/MatchWrap.Regular.Black.14"
        android:visibility="gone"
        android:layout_margin="12dp"
        android:text="@string/photos_option_galerie"/>

    </LinearLayout>

    <View
        style="@style/Divider.Horizontal"
        android:background="@color/base_line"/>

    <LinearLayout
        style="@style/MatchWrap.Horizontal"
        android:background="@color/base_dialog_buttons_background">
        <TextView
            android:id="@+id/nCancel"
            style="@style/PopupActionButtons"
            android:text="@string/photos_option_close"/>

    </LinearLayout>

</LinearLayout>
